fix version switch on smaller screen

--- a/src/components/VersionSwitch/VersionSwitch.scss
+++ b/src/components/VersionSwitch/VersionSwitch.scss
@@ -37,3 +37,9 @@
     color: rgba(255, 255, 255, 1);
   }
 }
+
+@media (max-width: 1100px) {
+  .VersionSwitch-option {
+    padding: 0.75rem 1.2rem;
+  }
+}
